...
      <Text
        style={[t.type.h1, { flex: 1 }]}
        numberOfLines={1}
        adjustsFontSizeToFit
        minimumFontScale={0.6}
      >
        My Releases
      </Text>
      <Pressable
        disabled={newReleaseDisabled}
        onPress={() => nav.navigate("WizardStep1")}
        style={{
          flexDirection: "row",
...
